lib/stratiform/res/test/stratiform/corpus/pos/schema-with-layer.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name base-schema-with-layer

document
  field name String

layer
  name extension-v1
  overlay
    field email String
    field active Flag
