lib/stratiform/res/test/stratiform/corpus/neg/e205-duplicate-layer-name.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name e207-test

document
  field foo string

layer
  name same-name
  overlay
    field a string

layer
  name same-name
  overlay
    field b string
